--- a/index.html
+++ b/index.html
@@ -1,10 +1,102 @@
-<html>
-  <link rel="stylesheet" href="style.css">
-  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reflektion</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
 
-<h1> Petras sida </h1>
-<p>
-  
-</p>
-  
+</head>
+<body>
+<header>
+<article class="Enreflektion">
+<h1>PETRA LUNDE</h1>
+<p class="undermittnamn">En Reflektion</p>
+</article>
+</header>
+
+<main>
+
+    <section class="parent">
+        <aside class="barn1">
+            <p>Webbteknik och UX design</p>
+        </aside>
+
+
+        <aside class="barn2">
+            <p>Epiq´s - Retro Shades</p>
+        </aside>
+
+    </section>
+    <section class="parent2">
+        <aside class="barnet">
+            <h2>Reflektion</h2>
+            <hr width="135.05px">
+
+            <p class="reflektionen">Min upplevelse av projektet är posetivt men samtidigt väldigt utmanande.<br> 
+                I gruppdelen är min upplevelse att vi alla tre var jämbördiga och vi kom alla med förslag
+                och ideér.<br> En stor lärdom jag har tagit till mig genom projektet är att planering och att göra delar 
+                i rätt ordning är av största betydelse.<br> Projektplaneringen jag har haft under vägens gång har varit
+                mycket tack vare <br> de uppgifter och stöd vi tilldelats och allt jag utläst från Dokument med just denna Eximinationsuppgift.
+            </p>
+            
+        </aside>
+        <aside class="barnet">
+            <h2>Bidrag till projektet</h2>
+            <hr width="135.05px">
+             <p class="reflektionen">Det finns det stunder som kreaktiviteten flödar och jag kan komma med nya 
+            ideér<br> så som namnet på vårt projekt var något jag kom fram till och det togs emot med bravur. <br>
+            Tiden var/är viktig för mig så jag tog nog mer eller mindre på mig att <br>
+            alltid se till att möte med gruppen arrangerades, dock så är jag samtidigt helt säker på <br> att vi hade kommit fram till gemensamma
+            dagar ändå. <br> Vi bidrog alla tre lika mycket till kvaliten på denna gruppdel i projektet.
+        </p>
+        </aside>
+        <aside class="barnet">
+        <h2> Utmaningar och lärdomar</h2>
+        <hr width="135.05px">
+        <p class="reflektionen">Då jag alltid är ärlig med mig själv så ska jag erkänna att nästan allt har varit<br> 
+        en utmaning i projektet, dock så älskar jag utmaningar och tar alltid till mig vad som kan göras bättre nästa 
+    gång. <br>Den utmaning jag ser har lärt mig mest och utmanat mig mest är tiden och planeringen. <br>
+Jag kommer i framtiden alltid börja printa ner på papper eller var som en tidspann, på ett undgefär och göra allt i tur och ordning.</p>
+        </aside>
+        <aside class="barnet">
+            <h2>Framtida förbättringar</h2> 
+            <hr width="135.05px">
+            <p class="reflektionen">Då detta är helt nytt för mig så kan jag inte säga på rak arm vad som skulle kunna 
+            förbättras eller<br> att det skulle finnas något jag kunde gjort som skulle bidragit mer. Det jag vet är<br>
+        att jag har lärt mig otroligt mycket på vägen och att allt kan alltid förbättras.</p>
+        </aside>
+        <aside class="barnet">
+            <h2>Slutsats</h2>
+            <hr width="135.05px">
+            <p class="reflektionen">Jag har slitit några grå hår på vägen men så roligt detta har varit. Jag har inte bara <br>
+            bidragit med skratt utan även en del ideér och jag hade turen att arbeta tillsammans med två personer som verkade <br>
+        som klippta och skurna för det här, otroligt kreativa människor. Vi har givit och tagit allt tillsammans.<br> Jag är nöjd med min insats och det är en skön känsla och<br>
+    Oavsett vad utslaget blir så tänker vi nog samma, en riktig success för att vara första gången.</p>
+        </aside> 
+    </section>
+</main>
+        <footer>
+            <p class="Tack">Tack för visat intresse</p>
+            <section class="knappar">
+            <button><a href="https://se.linkedin.com"><img src="LinkedIn.png" alt="LinkedIn"></a></button>
+            <button><a href="https://facebook.se"><img src="Facebook (1).png" alt="Facebook"></a></button>
+            <button><a href="https://instagram.com"><img src="Instagram Old.png" alt="Instagram"></a></button>
+        </section>
+        </footer>
+
+        <p class="gjordav">Vid tangenterna <span class="heart" ><3</span>Petra Lunde</p>
+
+
+
+
+
+
+
+    </body>
+
+
 </html>
