--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@ Jag kommer i framtiden alltid börja printa ner på papper eller var som en tids
         <footer>
             <p class="Tack">Tack för visat intresse</p>
             <section class="knappar">
-            <button><a href="https://se.linkedin.com"><img src="LinkedIn.png" alt="LinkedIn"></a></button>
-            <button><a href="https://facebook.se"><img src="Facebook (1).png" alt="Facebook"></a></button>
-            <button><a href="https://instagram.com"><img src="Instagram Old.png" alt="Instagram"></a></button>
+            <button><a href="https://se.linkedin.com"><img src="images/LinkedIn.png" alt="LinkedIn"></a></button>
+            <button><a href="https://facebook.se"><img src="images/Facebook (1).png" alt="Facebook"></a></button>
+            <button><a href="https://instagram.com"><img src="images/Instagram Old.png" alt="Instagram"></a></button>
         </section>
         </footer>
 
